--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -7,6 +7,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    default:
+      run:
+        shell: bash
+        working-directory: ./
     steps:
       - name: "GCC VERSION"
         run: gcc --version
