--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -15,6 +15,6 @@ jobs:
       - name: "GCC VERSION"
         run: gcc --version
       - name: "Compile Project"
-        run: make
+        run: make -f Makefile all
       - name: "Test"
         run: ./main test
