--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: "GCC VERSION"
         run: gcc --version
+      - name: Path
+        run: pwd
       - name: "Compile Project"
         run: make --file=Makefile all
       - name: "Test"
