DEBUG - Print children

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -14,8 +14,10 @@ jobs:
     steps:
       - name: "GCC VERSION"
         run: gcc --version
-      - name: Path
+      - name: "Path"
         run: pwd
+      - name: "All files"
+        run: ls -aR
       - name: "Compile Project"
         run: make --file=Makefile all
       - name: "Test"
