--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: "GCC VERSION"
         run: gcc --version
+      - name: "Check out repository"
+        uses: actions/checkout@v3
       - name: "Path"
         run: pwd
       - name: "All files"
