--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -1,9 +1,6 @@
 name: "C-Project Workflow"
 on:
-  push:
-    branches:
-      - "**"
-  pull_request:
+  [push, pull_request]:
     branches:
       - "**"
 
