--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -1,6 +1,9 @@
 name: "C-Project Workflow"
 on:
-  [push, pull_request]:
+  push:
+    branches:
+      - "**"
+  pull_request:
     branches:
       - "**"
 
