--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -1,21 +1,17 @@
 name: "C-Project Workflow"
 on:
-  push:
-    branches:
-      - "**"
-  pull_request:
-    branches:
-      - "**"
+  [push, pull_request]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    container: messeb/valgrind
     defaults:
       run:
         shell: bash
         working-directory: ./
     steps:
-      - name: "GCC VERSION"
+      - name: "GCC Version"
         run: gcc --version
       - name: "Check out repository"
         uses: actions/checkout@v3
@@ -23,3 +19,12 @@ jobs:
         run: make --file=Makefile all
       - name: "Test"
         run: ./program test
+        name: "Search for memory leaks"
+        run: valgrind -e \
+            --leak-check=full \
+            --show-error-list=yes \
+            --show-leak-kinds=all \
+            --error-exitcode=1 \
+            --verbose \
+            --log-file=valgrind.out.txt \
+            ./program test
