--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -15,8 +15,8 @@ jobs:
       - name: "Check out repository"
         uses: actions/checkout@v3
       - name: "Compile Project"
-        run: make --file=Makefile all
-      - name: "Test"
+        run: ./run.sh --compile
+      - name: "Tests"
         run: ./program test
       - name: "Search for memory leaks"
         run: valgrind --leak-check=full --show-leak-kinds=all --error-exitcode=1 --verbose ./program test
