Remove '--' from "./run.sh --compile"

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: "Check out repository"
         uses: actions/checkout@v3
       - name: "Compile Project"
-        run: ./run.sh --compile
+        run: ./run.sh compile
       - name: "Tests"
         run: ./program test
       - name: "Search for memory leaks"
