Update run.sh and workflow

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -14,7 +14,5 @@ jobs:
         run: gcc --version
       - name: "Check out repository"
         uses: actions/checkout@v3
-      - name: "Compile Project and run tests"
+      - name: "Compile Project and run tests using valgrinds"
         run: ./run.sh -t -v -o tests.txt
-      - name: "Search for memory leaks"
-        run: valgrind --leak-check=full --show-leak-kinds=all --error-exitcode=1 --verbose ./program test
